--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ server {
     # API 代理配置
     location /api/ {
         # 使用环境变量获取后端服务地址
-        proxy_pass ${API_URL};
+        proxy_pass ${API_URL}/api/;
         
         # 基本代理设置
         proxy_http_version 1.1;
